--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,34 @@ footer {
     margin-bottom:10em;
   }
 
-  @media (max-width: 575px) {
-    .txtShrink {
-      font-size: 2.5em; /* Font size for even smaller screens */
+  .infoTitle {
+    display:none;
+  }
 
+  @media (max-width: 768px) { /*phones*/
+    .txtShrink {
+      font-size: 2.5em;
     }
+
+    .infoRow {
+      display:none;
+    }
+
+    .infoTitle {
+      display:block;
+    }
+
+    .col-6 {
+      width: auto;
+    }
+  }
+
+  @media only screen and (min-width: 769px) and (max-width: 1024px) { /*tablets*/
+    .display-1 {
+      font-size: calc(1.625rem + 3vw);
+    }
+  }
+
+  @media only screen and (min-width: 1025px) { /*desktops*/
+
   }
